SF Primes/src/objects/ci_orchs_runs__c.object
<CustomObject>
    <description>custom object for managing Contact synch with Cast Iron</description>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt Consolidation ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>externalkey__c</fullName>
        <externalId>true</externalId>
        <label>externalkey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastrun__c</fullName>
        <label>lastrun</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orchestrationname__c</fullName>
        <label>orchestrationname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>projectname__c</fullName>
        <label>projectname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>routerhostname__c</fullName>
        <label>routerhostname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ci orchs runs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>orchs run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ci orchs runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>